fix: mobile (z-index + layout) + id generation

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1186,16 +1186,17 @@ html, body {
   }
 }
 .chat {
-  width: calc(100% - 40px);
-  height: 95dvh;
+  width: 100%;
+  height: 100%;
   padding: 21px;
   padding-bottom: 24px;
   display: flex;
   flex-direction: column;
   position: fixed;
-  transition: 500ms;
-  border-radius: 48px;
-  bottom: 20px;
+  transition-property: opacity, transform, scale;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
+  bottom: 0;
   background-color: var(--color-primary);
   z-index: 9999;
   border: 1px solid #cccccca2;
@@ -1203,7 +1204,10 @@ html, body {
 @media (width >= 48rem) {
   .chat {
     width: 400px;
+    height: 95dvh;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.22);
+    border-radius: 48px;
+    bottom: 20px;
   }
 }
 .open-chat-from-left {
@@ -1243,17 +1247,20 @@ html, body {
   transform-origin: bottom left;
 }
 @media (width < 48rem) {
-  .mobile-open-chat-to-bottom {
+  .mobile-open-chat-from-bottom {
     transform: translate(0, 0);
-    right: 20px;
+    left: 0;
+    right: 0;
     opacity: 1;
+    transform-origin: bottom;
   }
   .mobile-close-chat-to-bottom {
     transform: translate(0, 0);
-    right: 20px;
-    left: 20px;
+    left: 0;
+    right: 0;
     opacity: 0;
     pointer-events: none;
+    transform-origin: bottom;
   }
 }
 .button-shadow {
